<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Bin Idik</string>
    <string name="facebook_app_id">1147627782414601</string>
    <string name="fb_login_protocol_scheme">fb1147627782414601</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered? Log In!</string>
    <string name="title_activity_reset_password">Reset Password Activity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Back</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="user_name">Name</string>
    <string name="user_mobile">Mobile</string>
    <string name="user_alt_mobile">Alternate Mobile No.(optional)</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="my_orders">My orders</string>
    <string name="price_range">Estimated Price Range</string>
    <string name="btn_user_location">Set Your Location</string>
    <string name="category" tools:ignore="DuplicateDefinition">Category</string>
    <string name="expiry">Set Expiry of order</string>
    <string name="btn_category">None</string>
    <string name="min_int">Minimum</string>
    <string name="max_int">Maximum</string>
    <string name="main_dialog_date_picker">Date</string>
    <string name="main_dialog_time_picker">Time</string>
    <string name="dialog_save">Please fill all the details!</string>
    <string name="dialog_ok">OK</string>
    <string name="save_details">Save Details</string>
    <string name="description" tools:ignore="DuplicateDefinition">Description</string>
    <string name="orderId">order ID</string>
    <string name="status">Status</string>
    <string name="deliveryCharge">Delivery Charge (including. service charge):</string>
    <string name="min_range">Minimum:</string>
    <string name="max_range">Maximum:</string>
    <string name="userDetails">User Details</string>
    <string name="userName">Name:</string>
    <string name="userPhoneNumber">Phone Number.:</string>
    <string name="userLocationName">Place:</string>
    <string name="userLocationLocation">Location:</string>
    <string name="expiryTime">Order Expiry</string>
    <string name="expiryTimeDate">Date:</string>
    <string name="expiryTimeTime">Time:</string>
    <string name="final_item_price">Final Item Price:</string>
    <string name="final_total">Total (to pay):</string>
    <string name="final_order_charge">Final Order Charge</string>
    <string name="archived_label">Archived</string>
    <string name="undo_label">Undo</string>
    <string name="deliverer_all">All Orders</string>
    <string name="btn_accepted_by">Accepted By</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_show_path">Show Path</string>
    <string name="btn_mark_delivered">Mark Delivered</string>
    <string name="btn_send_otp">Send OTP</string>
    <string name="enter_otp1">Enter OTP (as received from Orderer) :</string>
    <string name="ask_otp1">Note:  Ask orderer to open order details for OTP in case of no notification.</string>
    <string name="btn_complete_order">Complete  Order</string>
    <string name="enter_actual_price">Enter actual price of item bought</string>
    <string name="tnd">TND</string>
    <string name="email_verify">Email Verification Required</string>
    <string name="email_sent">An email has been sent to:</string>
    <string name="follow_instructions">Please follow the instructions in the verification email to finish creating your theDeliveryApp account.</string>
    <string name="resend_email">Didn\'t receive an email?</string>
    <string name="btn_resend_email">Resend Verification Email</string>
    <string name="done_verify">Done Verification?</string>
    <string name="btn_refresh">Refresh</string>
    <string name="btn_logout">Log out</string>
    <string name="btn_proceed">Proceed</string>
    <string name="confirmation">Pay</string>
    <string name="deliveryChargeDialog">Price estimated over this order is :</string>
    <string name="btn_save">Save</string>
    <string name="insufficientBalance">You have insufficient balance!</string>
    <string name="locationValidation">choose a valid location</string>
    <string name="word_GPS_not_enabled">gps not enabled</string>
    <string name="word_GPS_enable">gps enabled</string>
    <string name="word_GPS">GPS</string>
    <string name="Confirmpass">Confirm password</string>
    <string name="filedloadingmsgs">Failed to load messages.</string>
    <string name="newmsgs">New Message</string>
    <string name="commndnumber">Command Number° </string>
    <string name="nochatrooms">no rooms</string>
    <string name="chatrooms">Chat rooms</string>
    <string name="coodConnectedTOinternet">Good! Connected to Internet</string>
    <string name="pasdinternet">Sorry! Not connected to internet</string>
    <string name="prixactuel">Actual price of order : </string>
    <string name="coutdelaivraison">Delivery charge : </string>
    <string name="totalapaye">Total to pay : </string>
    <string name="areyousure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="locationhasenullvalue">location has NULL value</string>
    <string name="gpspermisiiondenied">GPS permission Denied</string>
    <string name="logoutsuccsess">You have been successfully logged out.</string>
    <string name="allorders">All Orders</string>
    <string name="finishedorder">Finished</string>
    <string name="activeorders">Active</string>
    <string name="pendingorders">Pending</string>
    <string name="editorder">Edit Order</string>
    <string name="food" tools:ignore="DuplicateDefinition">Food</string>
    <string name="medcin">Medicine</string>
    <string name="houshold">Household</string>
    <string name="electronic">Electronics</string>
    <string name="toileterie">Toiletries</string>
    <string name="books">Books</string>
    <string name="clothing">Clothing</string>
    <string name="shoes">Shoes</string>
    <string name="sport">Sports</string>
    <string name="games">Games</string>
    <string name="others">Others</string>
    <string name="choosecategorie">Choose Category</string>
    <string name="mincantbebiggerthanmax">Min value cannot be more than Max value!</string>
    <string name="canteditacceptedorder">can\'t edit already accepted order</string>
    <string name="locationpermessiongranted">Location permission granted</string>
    <string name="locationpermessiondenied">Location permission Denied</string>
    <string name="getinformed">Get informed</string>
    <string name="entremailaddress">Enter email address!</string>
    <string name="entrepass">Enter password!</string>
    <string name="loggedsucc">Logged in Successfully</string>
    <string name="faildtologin">Failed to Log in!</string>
    <string name="welcom">Welcome</string>
    <string name="verifie">verify</string>
    <string name="enattentverification">account waiting verification</string>
    <string name="noneedtoverify">no need for verification you r ready to go</string>
    <string name="longclicktoviewimage">long click to view picture</string>
    <string name="choisireimageSource">Choose image source</string>
    <string name="camera">camera</string>
    <string name="gallery">Gallery</string>
    <string name="addprofilepic">add profile pic</string>
    <string name="logout">Logout ?</string>
    <string name="addcinpic">add cin pic</string>
    <string name="camerapermesiongranted">Camera permission granted</string>
    <string name="selectpic">Select Picture</string>
    <string name="rate">Rate</string>
    <string name="login">login</string>
    <string name="emailsentto">Verification email sent to : </string>
    <string name="faildtosend">Failed to send verification email!</string>
    <string name="completverification">Please complete email verification first!</string>
    <string name="myorders">My orders</string>
    <string name="cancledorders">Cancelled</string>
    <string name="expiredorders">Expired</string>
    <string name="finihsidorders">Finished</string>
    <string name="yourordersexpired">Your some orders expired</string>
    <string name="nom">Name:</string>
    <string name="mobile">Mobile:</string>
    <string name="emaill">E-mail:</string>
    <string name="delevirerDetails">Deliverer Details</string>
    <string name="call">call</string>
    <string name="alt_mobile">Alt. Mobile:</string>
    <string name="msgcantbeempty">message can not be empty</string>
    <string name="info">Info</string>
    <string name="notification">Notification</string>
    <string name="uploading">uploading...</string>
    <string name="donecin">"Done  CIN "</string>
    <string name="errorwhileuploading">error while uploading</string>
    <string name="nofilesemcted">NO file is selected</string>
    <string name="deletedoldpic">deleted old pic</string>
    <string name="entrename">Enter your Name!</string>
    <string name="entremobile">Enter your Mobile No.!</string>
    <string name="Enter8digitnumber">Enter 8-digit Mobile No.!</string>
    <string name="cin8">CIN must be 8 numbers !</string>
    <string name="emailem">Enter email address!</string>
    <string name="entrpass">Enter password!</string>
    <string name="emailtyperror">The email address is badly formatted.</string>
    <string name="emailused">The email address is already in use by another account.</string>
    <string name="passwordshort">Password too short, enter minimum 6 characters!</string>
    <string name="succesregistr">Successfully Registered.</string>
    <string name="faildreg">Registration Failed!</string>
    <string name="passworddntmatch">password don\'t match !</string>
    <string name="log_out">Log out</string>
    <string name="verify">verify</string>
    <string name="get_informed">Get informed:</string>
    <string name="shopper">Shopper</string>
    <string name="deliverer">Deliverer</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="verified">verified</string>
    <string name="Doneprofile">"Done ☺ profile "</string>
    <string name="erroruploading">error while uploading</string>
    <string name="settings">Settings</string>
    <string name="payments">Payments</string>
    <string name="sign_out">Sign Out</string>
    <string name="account_settings">Account Settings</string>
    <string name="finished">Finished</string>
    <string name="pending">Pending</string>
    <string name="active">Active</string>
    <string name="all_orders">All orders</string>
    <string name="filters">Filters</string>
    <string name="chat_rooms">Chat rooms</string>
    <string name="view_as_orderer">View as Orderer</string>
    <string name="view_as_deliverer">View as Deliverer</string>
    <string name="chat">Chat</string>
    <string name="cancelled">Cancelled</string>
    <string name="expired">Expired</string>
    <string name="inbox">Inbox</string>
    <string name="view_profile">View profile</string>
</resources>