<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/use_as_deliverer"
            android:icon="@drawable/ic_deliverer_new"
            android:title="@string/view_as_deliverer"
        />

        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_baseline_mood_24"
            android:title="@string/view_profile" />

        <item
            android:id="@+id/chat"
            android:icon="@drawable/ic_baseline_message_24"
            android:title="@string/chat" />
    </group>

    <item
        android:title="@string/filters">

        <menu>

            <item
                android:id="@+id/all_orders_user"
                android:icon="@drawable/ic_all_orders"
                android:title="@string/all_orders" />

            <item
                android:id="@+id/active_user"
                android:icon="@drawable/ic_active"
                android:title="@string/active" />

            <item
                android:id="@+id/pending_user"
                android:icon="@drawable/ic_pending"
                android:title="Pending" />

            <item
                android:id="@+id/completed_user"
                android:icon="@drawable/ic_finished"
                android:title="@string/finished" />

            <item
                android:id="@+id/cancelled_user"
                android:icon="@drawable/ic_cancelled"
                android:title="@string/cancelled" />

            <item
                android:id="@+id/expired_user"
                android:icon="@drawable/ic_expired"
                android:title="@string/expired" />

        </menu>
    </item>

    <item
        android:title="@string/account_settings">

        <menu>

            <item
                android:id="@+id/info"
                android:icon="@drawable/ic_baseline_info_24"
                android:title="@string/inbox" />

            <item
                android:id="@+id/setting"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/settings"
                android:visibility="visible" />

            <item
                android:id="@+id/sign_out_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_menu_signout"
                android:title="@string/sign_out"  />
        </menu>
    </item>

</menu>
