<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            app:titleTextColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="65dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:text="@string/description"
                android:textColor="@color/primary"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/description_of_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/deliverylocationa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_round"
                android:paddingLeft="40dp"
                android:paddingTop="10dp"
                android:paddingRight="40dp"
                android:paddingBottom="10dp"
                android:text="chose from where to get your order"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:paddingTop="20dp"
                android:text="@string/category"
                android:textColor="@color/primary"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/btn_category"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:paddingLeft="3dp"
                android:paddingTop="7dp"
                android:text="@string/btn_category"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:focusable="true" />

            <!--
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingLeft="3dp"
                android:text="@string/delivery_charge"
                android:textColor="@color/primary"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/delivery_charge"
                android:inputType="number"
                android:maxLength="5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:paddingTop="20dp"
                android:text="@string/price_range"
                android:textColor="@color/primary"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/min_int"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/min_int"
                    android:inputType="number"
                    android:maxLength="6" />

                <EditText
                    android:id="@+id/max_int"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/max_int"
                    android:inputType="number"
                    android:maxLength="6" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:paddingTop="20dp"
                android:text="@string/expiry"
                android:textColor="@color/primary"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_date_picker"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@drawable/button_round"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/main_dialog_date_picker"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btn_time_picker"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="9dp"
                    android:layout_marginLeft="9dp"
                    android:layout_marginTop="13dp"
                    android:background="@drawable/button_round"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/main_dialog_time_picker"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/user_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button_round"
                    android:paddingBottom="10dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:paddingTop="10dp"
                    android:text="@string/btn_user_location"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_proceed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_round_main"
                    android:paddingBottom="10dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:paddingTop="10dp"
                    android:text="@string/btn_save"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />
            </LinearLayout>


        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</ScrollView>